apps/longhorn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-gateway
  namespace: infra-longhorn
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.241
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
      allowedRoutes:
        namespaces:
          from: Same
