apps/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-https-route
  namespace: infra-longhorn
spec:
  parentRefs:
    - name: longhorn-gateway
  hostnames:
    - "longhorn.public.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
        - path:
            type: PathPrefix
            value: /backupstores
        - path:
            type: PathPrefix
            value: /volumes
      backendRefs:
        - name: longhorn-backend
          port: 9500
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
